--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "lint": "eslint src/"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.52.2",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.5",
     "i18next": "^23.7.16",
     "i18next-browser-languagedetector": "^7.2.0",
     "prettier": "^3.2.4",
@@ -21,10 +23,12 @@
     "styled-components": "^6.1.8"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/eslint": "^8.56.2",
     "@types/node": "^20.11.5",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
+    "@types/react-query": "^1.2.9",
     "@typescript-eslint/eslint-plugin": "^6.19.0",
     "@typescript-eslint/parser": "^6.19.0",
     "@vitejs/plugin-react": "^4.2.1",
